apps/client-storagarage/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-storagarage-stable
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-storagarage
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: stable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3102
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-storagarage
---
apiVersion: v1
kind: Service
metadata:
  name: client-storagarage-canary
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-storagarage
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3102
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-storagarage
