apps/client-storagarage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-storagarage
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-storagarage
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`web.storagarage.com`) || Host(`s3.storagarage.com`) || Host(`registry.storagarage.com`) || Host(`store.storagarage.com`) || Host(`ssm.storagarage.com`)
      kind: Rule
      services:
        - name: client-storagarage-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: client-storagarage-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
